--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -99,6 +99,27 @@ button {
 	background-color: #fe8fb8d3;
 }
 
+.color-1 {
+	background-color: #fe8f8fda;
+	color: #fe8f8fda;
+}
+
+.color-2 {
+	background-color: #71c7f9d2;
+	color: #71c7f9d2;
+}
+
+.color-3 {
+	background-color: #f6cd64c6;
+	color: #f6cd64c6;
+}
+
+.color-4 {
+	background-color: #fe8fb8d3;
+	color: #fe8fb8d3;
+}
+
+
 input:focus {outline: 2px solid #d50000;} /* outline 테두리 속성 수정 */
 input:focus {outline: none;} /* outline 테두리 없애기 */
 
@@ -412,6 +433,11 @@ textarea:focus {
 
 /* ************************************************************* */
 /* 리스트 페이지 */
+.list-insert-btn {
+	position: absolute;
+	top:50%;
+	left: 1800px;
+}
 
 .list-main {
 	height: 940px;
@@ -796,12 +822,13 @@ textarea:focus {
 	padding-top: 60px;
 }
 
-/* .update-content-box {
+.update-content-box {
 	width: 1500px;
 	height: 770px;
-	background-color: rgba(255, 255, 255, 0.3);
-	margin: 0 auto;
-} */
+	background-color: rgba(255, 255, 255, 0.5);
+	margin: auto;
+	padding: 50px;
+}
 
 .update-title {
 	margin: auto;
@@ -810,11 +837,21 @@ textarea:focus {
 }
 
 .update-title-input {
-	background-color: rgba(255, 255, 255, 0.635);
+	background-color: rgba(255, 255, 255, 0.5);
 	width: 1300px;
 	height: 100px;
 	padding: 20px;
-	font-size: 30px;
+	font-size: 35px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.update-title-input:hover {
+	background-color: rgba(255, 255, 255, 1);
+}
+
+.update-title-input:focus {
+	background-color: rgba(255, 255, 255, 1);
 }
 
 .update-title-input::placeholder {
@@ -828,11 +865,21 @@ textarea:focus {
 }
 
 .upadte-content-textarea {
-	background-color: rgba(255, 255, 255, 0.635);
+	background-color: rgba(255, 255, 255, 0.5);
 	width: 100%;
 	height: 450px;
 	padding: 20px;
-	font-size: 30px;
+	font-size: 35px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.upadte-content-textarea:hover {
+	background-color: rgba(255, 255, 255, 1);
+}
+
+.upadte-content-textarea:focus {
+	background-color: rgba(255, 255, 255, 1);
 }
 
 .upadte-content-textarea::placeholder {
@@ -849,19 +896,30 @@ textarea:focus {
 	padding: 20px;
 	padding-left: 50px;
 	padding-right: 50px;
-	font-size: 30px;
-	background-color: rgba(255, 255, 255, 0.635);
+	font-size: 35px;
+	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 10px;
+}
+
+.update-btn:hover {
+	background-color: rgba(255, 255, 255, 1);
 }
 
 .update-close-btn {
 	padding: 20px;
 	padding-left: 50px;
 	padding-right: 50px;
-	font-size: 30px;
-	background-color: rgba(255, 255, 255, 0.635);
+	font-size: 35px;
+	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 10px;
+	display: inline-block;
+	cursor: pointer;
 }
+
+.update-close-btn:hover {
+	background-color: rgba(255, 255, 255, 1);
+}
+
 /* ************************************************************* */
 /* 오류처리 */
 .arr_err_msg {
