--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -100,22 +100,18 @@ button {
 }
 
 .color-1 {
-	background-color: #fe8f8fda;
 	color: #fe8f8fda;
 }
 
 .color-2 {
-	background-color: #71c7f9d2;
 	color: #71c7f9d2;
 }
 
 .color-3 {
-	background-color: #f6cd64c6;
 	color: #f6cd64c6;
 }
 
 .color-4 {
-	background-color: #fe8fb8d3;
 	color: #fe8fb8d3;
 }
 
@@ -236,6 +232,21 @@ textarea:focus {
 }
 
 .search-icon:hover {
+	opacity: 100%;
+}
+
+.header-insert-btn {
+	margin-top: -1px;
+	width: 50px;
+	height: 51px;
+	background-image: url(/assignment/src/css/img/insert.png);
+	background-size: cover;
+	cursor: pointer;
+	float: right;
+	opacity: 50%;
+}
+
+.header-insert-btn:hover {
 	opacity: 100%;
 }
 /* ************************************************************* */
@@ -433,15 +444,10 @@ textarea:focus {
 
 /* ************************************************************* */
 /* 리스트 페이지 */
-.list-insert-btn {
-	position: absolute;
-	top:50%;
-	left: 1800px;
-}
 
 .list-main {
 	height: 940px;
-	padding-top: 30px;
+	padding-top: 40px;
 }
 
 .list-content {
@@ -825,25 +831,34 @@ textarea:focus {
 .update-content-box {
 	width: 1500px;
 	height: 770px;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.7);
 	margin: auto;
-	padding: 50px;
+	padding: 30px;
+	border-radius: 10px;
+	border: 1px solid #ffffff;
 }
 
+.update-title-p {
+	text-align: center;
+	font-size: 40px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
 .update-title {
 	margin: auto;
 	width: 1300px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 .update-title-input {
 	background-color: rgba(255, 255, 255, 0.5);
 	width: 1300px;
-	height: 100px;
+	height: 80px;
 	padding: 20px;
 	font-size: 35px;
 	text-align: center;
 	border-radius: 10px;
+	border: 1px solid #3030307e;
 }
 
 .update-title-input:hover {
@@ -858,6 +873,13 @@ textarea:focus {
 	text-align: center;
 }
 
+.update-content-p {
+	text-align: center;
+	font-size: 40px;
+	font-weight: 600;
+	margin-bottom: 20px;
+}
+
 .update-content{
 	margin: auto;
 	width: 1300px;
@@ -867,11 +889,12 @@ textarea:focus {
 .upadte-content-textarea {
 	background-color: rgba(255, 255, 255, 0.5);
 	width: 100%;
-	height: 450px;
+	height: 400px;
 	padding: 20px;
 	font-size: 35px;
 	text-align: center;
 	border-radius: 10px;
+	border: 1px solid #3030307e;
 }
 
 .upadte-content-textarea:hover {
@@ -894,9 +917,9 @@ textarea:focus {
 
 .update-btn {
 	padding: 20px;
-	padding-left: 50px;
-	padding-right: 50px;
-	font-size: 35px;
+	padding-left: 30px;
+	padding-right: 30px;
+	font-size: 25px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 10px;
 }
@@ -907,9 +930,9 @@ textarea:focus {
 
 .update-close-btn {
 	padding: 20px;
-	padding-left: 50px;
-	padding-right: 50px;
-	font-size: 35px;
+	padding-left: 30px;
+	padding-right: 30px;
+	font-size: 25px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 10px;
 	display: inline-block;
