--- a/vue/vueshop/src/assets/css/common.css
+++ b/vue/vueshop/src/assets/css/common.css
@@ -27,6 +27,14 @@
     border-radius: 10px;
 }
 
+.discount {
+    background-color: beige;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    font-size: 1.4rem;
+}
+
 /* 모달 등장 애니메이션 */
 .modalAni-enter-from {
     opacity: 0;
