--- a/portfolio/src/laravel_reason/public/css/common.css
+++ b/portfolio/src/laravel_reason/public/css/common.css
@@ -285,7 +285,27 @@ footer {
     opacity: 0.7;
 }
 
+.login-main-center a {
+    margin-top: 15px;
+    /* width: 80%; */
+    width: 400px;
+    color: #000000c5;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 5px;
+    border: 1px solid #fff;
+    padding: 14px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    cursor: pointer;
+    opacity: 0.7;
+    display: inline-block;
+}
+
 .login-main-center button:hover {
+    opacity: 1;
+}
+
+.login-main-center a:hover {
     opacity: 1;
 }
 
@@ -399,6 +419,7 @@ footer {
     cursor: pointer;
     opacity: 0.7;
 }
+
 
 .registation-main-center button:hover {
     opacity: 1;
