--- a/portfolio/src/laravel_reason/public/css/common.css
+++ b/portfolio/src/laravel_reason/public/css/common.css
@@ -149,36 +149,24 @@ footer {
 
 /* ========================================================= */
 
-.modal-body {
-    background-color: black;
-    position:absolute;
-    justify-content: center;
-    top:0;
-    left:0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    display: none;
-}
 
 #modal {
     background-color: black;
-    opacity: 0.9;
+    opacity: 0.8;
     position:absolute;
     justify-content: center;
     top:0;
     left:0;
     z-index: 1;
-    width: 100%;
+    width: 30%;
     height: 100%;
-    display: none;
 }
 
 .modal-content {
-    margin: 5% auto;
+    margin: 30% auto;
     padding: 20px;
     width: 80%;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 700;
     color: #fff;
     text-align: center;
@@ -235,6 +223,9 @@ footer {
     padding-right: 100px;
 }
 
+.login-main-center {
+    width: 400px;
+}
 
 .login-main-center h2 { 
     font-size: 2rem;
